:bookmark: README and package.json modifications

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "prefix": "$",
-    "token": "NzUzMTM0MTc4MjY2MTIwMjgz.X1hw3A.FSIsKRafiPqjoEqI_qUD910LkV8",
+    "token": "",
     "availableCommands": [
         {
             "command": "ey",
