--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-    "name": "bot",
+    "name": "discord-test-bot",
     "version": "1.0.0",
-    "main": "index.js",
+    "description": "Basic Discord bot for educational purposes.",
+    "main": "index.ts",
     "license": "MIT",
     "dependencies": {
         "discord.js": "^12.3.1"
+    },
+    "author": {
+        "name": "Franklin Esquivel",
+        "email": "franklin.esquivel@outlook.com"
     },
     "devDependencies": {
         "@types/node": "^14.6.4",
