--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
     "name": "discord-test-bot",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "description": "Basic Discord bot for educational purposes.",
     "main": "index.ts",
     "license": "MIT",
     "dependencies": {
-        "discord.js": "^12.3.1"
+        "discord.js": "^12.3.1",
+        "dotenv": "^8.2.0"
     },
     "author": {
         "name": "Franklin Esquivel",
