--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "license": "MIT",
     "dependencies": {
         "discord.js": "^12.3.1",
-        "dotenv": "^8.2.0"
+        "dotenv": "^8.2.0",
+        "typescript": "^4.0.2"
     },
     "author": {
         "name": "Franklin Esquivel",
         "email": "franklin.esquivel@outlook.com"
     },
     "devDependencies": {
-        "@types/node": "^14.6.4",
+        "@types/node": "^14.10.0",
         "@types/ws": "^7.2.6",
         "eslint": "^7.8.1",
         "nodemon": "^2.0.4"
