--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
         "email": "franklin.esquivel@outlook.com"
     },
     "devDependencies": {
+        "@types/jest": "^26.0.13",
         "@types/node": "^14.10.0",
         "@types/ws": "^7.2.6",
         "eslint": "^7.8.1",
+        "jest": "^26.4.2",
         "nodemon": "^2.0.4"
     },
     "scripts": {
