--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
         "strict": true,
         "target": "ES5",
-        "outDir": "build",
+        "rootDir": "./src",
+        "outDir": "./build",
         "sourceMap": true,
         "resolveJsonModule": true
     }
