:new: Implement Jest as testing manager  - Bugfix: client was not listening messages for typo on listener  - Jest config files to run TS  - Test command  - Update TSConfig. Not include node_modules and tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,11 @@
     "compilerOptions": {
         "strict": true,
         "target": "ES5",
-        "rootDir": "./src",
         "outDir": "./build",
         "sourceMap": true,
-        "resolveJsonModule": true
-    }
+        "resolveJsonModule": true,
+        "removeComments": true,
+    },
+    "include": ["./src/**/*.ts"],
+    "exclude": ["./node_modules", "./tests/*.test.ts"]
 }
