--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "discord-test-bot",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "description": "Basic Discord bot for educational purposes.",
     "main": "index.ts",
     "license": "MIT",
@@ -19,10 +19,12 @@
         "@types/ws": "^7.2.6",
         "eslint": "^7.8.1",
         "jest": "^26.4.2",
-        "nodemon": "^2.0.4"
+        "nodemon": "^2.0.4",
+        "ts-jest": "^26.3.0"
     },
     "scripts": {
         "start": "nodemon build/index.js",
-        "dev": "tsc --removeComments -w --pretty"
+        "dev": "tsc --removeComments -w --pretty",
+        "test": "jest"
     }
 }
